fix us of env variables

--- a/.env.sample
+++ b/.env.sample
@@ -1,9 +1,9 @@
 ADDRESSES = {
-    TOKEN: 'tokenAddress',
+    TOKEN: 'tokenInAddress',
     factory: 'factoryAddress',
     router: 'routerAddress',
     recipient: 'recipientAddress'
   }
 MNEMONIC = 'your passphrase here'
 INFURA_URL = 'your infura url here'
-AMOUNT_TO_SWAP = desired amount of WETH to swap here (in regular float, not uint)
+AMOUNT_TO_SWAP = 'desired amount of tokenIn to swap here (decimal number as a string, not uint)''
