even more env fixes

--- a/.env.sample
+++ b/.env.sample
@@ -4,6 +4,7 @@ ADDRESSES = {
     router: 'routerAddress',
     recipient: 'recipientAddress'
   }
+TOKEN_TICKER = 'tokenIn ticker, e.g. WETH'
 MNEMONIC = 'your passphrase here'
 INFURA_URL = 'your infura url here'
 AMOUNT_TO_SWAP = 'desired amount of tokenIn to swap here (decimal number as a string, not uint)''
